fixed the gap in versus container

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ button
 .versus-container
 {
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .choice
